final project and solved the issue for CORS